crates/cli/tests/snapshots/snapshot_tests__compact_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
unused-file:src/dead.ts
unused-export:src/utils.ts:10:helperFn
unused-type:src/types.ts:5:OldType
unused-dep:lodash
unused-devdep:jest
unused-optionaldep:fsevents
unused-enum-member:src/enums.ts:8:Status.Deprecated
unused-class-member:src/service.ts:42:UserService.legacyMethod
unresolved-import:src/app.ts:3:./missing-module
unlisted-dep:chalk
duplicate-export:Config
type-only-dep:zod
test-only-dep:msw
circular-dependency:src/a.ts:3:src/a.ts → src/b.ts → src/a.ts
