crates/cli/tests/snapshots/snapshot_tests__json_empty.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: "json_str.replace(&format!(\"\\\"version\\\": \\\"{}\\\"\", env!(\"CARGO_PKG_VERSION\")),\n\"\\\"version\\\": \\\"[VERSION]\\\"\",)"
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 0,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": []
}
